<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnObservableJust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_observable_just" />

    <Button
        android:id="@+id/btnObservableFromArray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observable_from_array" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter your text please"
        />

    <Button
        android:id="@+id/btnObservableOperators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_observable_operators" />

    <Button
        android:id="@+id/btnObservableEditTextEmitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_observable_edit_text_emitter" />

    <TextView
        android:id="@+id/textViewDisplay"
        android:text="@string/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</androidx.appcompat.widget.LinearLayoutCompat>